[package]
name = "libcapstone-sys"
version = "0.3.0"
authors = ["th0rex"]
build = "build.rs"
description = "Raw bindings to the capstone disassembler engine"
license = "MIT"
repository = "https://github.com/th0rex/libcapstone-sys"

[dependencies]

[build-dependencies]
# Update as soon as a new version is released.
# We need the no-prepend-enum-name feature.
bindgen = { git = "https://github.com/servo/rust-bindgen", rev = "b71c7ba46b5992e00cc05d9d5788b9cecbcb6305"}